# urho3d-with-hunter

./: .travis.yml  CMakeLists.txt  README.rst  appveyor.yml
android/: AndroidManifest.xml.in
android/res/layout/: scripts_list.xml
cmake/Hunter/: config.cmake
